# project-template

./: .gitignore  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
docs/: deploy.md  index.md  meetings.md  requirements.md  research.md  tech.md  usage.md
src/project_template/: __init__.py  cmdline.py  constants.py  exceptions.py  log.py  manage.py
src/project_template/config/: __init__.py  settings.local.yml  settings.yml
src/project_template/example_blog/: dao.py  db.py  dependencies.py  middlewares.py  models.py  routes.py  schemas.py  server.py  services.py  views.py
src/project_template/example_etl/extractor/: base.py  file.py
src/project_template/example_etl/loader/: file.py
src/project_template/example_etl/transformer/: strip.py
src/project_template/extractor/: file.py
src/project_template/loader/: file.py
src/project_template/transformer/: base.py  strip.py
tests/: __init__.py  test_cmdline.py  test_log.py  test_version.py
