[tool.poetry]
name = "project_template"
version = "0.1.0"
description = "This is my project template."
readme = "README.md"
authors = ["zp <2579349206@qq.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.1.12"
click = "^8.1.3"
rich = "^14.1.0"
sqlalchemy = "^2.0.43"
mysqlclient = "^2.2.7"
stevedore = "^5.5.0"
pydantic = "^2.11.9"
fastapi = "^0.116.2"
uvicorn = "^0.35.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
tox = "^4.5.2"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pytest-pylint = "^0.19.0"
pre-commit = "^3.3.2"

[tool.poetry.plugins."example_etl.extractor"]
file = "project_template.extractor.file:FileExtractor"

[tool.poetry.plugins."example_etl.loader"]
file = "project_template.loader.file:FileLoader"

[tool.poetry.plugins."example_etl.transformer"]
strip = "project_template.transformer.strip:StripTransformer"

[tool.poetry.scripts]
project_template = "project_template.cmdline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[tool.pylint.design]
max-line-length = 120
